Finished first page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
                 <h2>السلام عليكم</h2>
                 <h3>Assalamu alaiku</h3>
             </header>
-    
+            
+            <div class="hr">
+                <!--Linha divisória -->
+            </div>
+
             <main class="main-login">
                 <div class="headline">
                     <h1>Welcome back!</h1>
